Project

General

Profile

Bug #37281

rgw: multisite: bucket sync fails to read sync state

Added by Yehuda Sadeh over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

happens on current master. Regression introduced in: fc860a367bc59d4c70e7e80f021235864c5da08b

Problem is that bucket sync state attrs are kept in attributes that aren't prefixed with the common rgw prefix, so they get filtered out.

History

#1 Updated by Casey Bodley over 5 years ago

  • Status changed from New to Resolved

Also available in: Atom PDF